--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -44,7 +44,7 @@
          		
         </div>
         <!-- thirdparty libraries-->
-		<script src="http://maps.googleapis.com/maps/api/js?key=AIzaSyDj5VyPaDxq8JOZkLEy78fK8YGjCNb3qGA&libraries=visualization"></script>		
+				
         <script src="js/thirdparty/jquery/jquery-3.2.1.min.js"></script>	
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>	
         <script src="js/thirdparty/angular/angular.min.js"></script>
@@ -58,6 +58,8 @@
         <script src="js/thirdparty/angular-translate/angular-translate.min.js"></script>
         <script src="js/thirdparty/angular-translate/angular-translate-loader-static-files.min.js"></script>		
         <script src="js/thirdparty/angular-ui-tree/angular-ui-tree.min.js"></script>
+        <script async defer src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBUqfsa6I7Fhud3-xK24rldx0iKDcueURA" type="text/javascript"></script>
+<!--         <script src="http://maps.googleapis.com/maps/api/js?key=AIzaSyDj5VyPaDxq8JOZkLEy78fK8YGjCNb3qGA&libraries=visualization"></script> -->
         <script src="js/thirdparty/angular-ngmaps/ng-map.min.js"></script>
         <script src="js/thirdparty/angular-ng-tags-input/ng-tags-input.min.js"></script>
 		<script src="js/thirdparty/angular-loading/loading-bar.min.js"></script>	
