--- a/src/main/resources/static/views/include-avaliacao.html
+++ b/src/main/resources/static/views/include-avaliacao.html
@@ -1,56 +1,51 @@
 <div class="panel-body ">
 	<div class="rate-review-box review-box col-md-12">
-		<div class="overall-box col-md-4 pull-left">
+		<div class="overall-box col-md-4 pull-left" style="margin-bottom:3%;">
 			<span>5.0</span>
 			<div class="rating_stars ">
-				<i class="icon-star fa fa-star icon_on"></i> <i
-					class="icon-star fa fa-star icon_on"></i> <i
-					class="icon-star fa fa-star icon_on"></i> <i
-					class="icon-star fa fa-star icon_on"></i> <i
-					class="icon-star fa fa-star icon_on"></i>
+				<i class="icon-star fa fa-star icon_on"></i>
+				<i class="icon-star fa fa-star icon_on"></i>
+				<i class="icon-star fa fa-star icon_on"></i>
+				<i class="icon-star fa fa-star icon_on"></i>
+				<i class="icon-star fa fa-star icon_on"></i>
 			</div>
 			<div class="count-reviews">(30 avaliações)</div>
 		</div>
+		<div style="width:50px;"></div>
 		<div class="rating col-md-8 pull-right">
-			<div class="rating_bars"
-				style="order: 1; font-size: 11px; line-height: normal; width: 100% !Important; margin-top: -10px; content: ''; display: table;">
+			<div class="rating_bars" style="order: 1; font-size: 11px; line-height: normal; width: 100% !Important; margin-top: -10px; content: ''; display: table;">
 				<div class="rating_bar" title="93% das avaliações possui 5 estrelas">
 					<div class="rating_header">5 estrelas</div>
 					<div class="rating_count">(28)</div>
-					<div class="rating_progress progress progress-danger"
-						style="height: 10px !Important; margin-top: -10px !Important;">
+					<div class="rating_progress progress progress-danger" style="height: 10px !Important; margin-top: -10px !Important;">
 						<div class="bar progress-bar" style="width: 93%"></div>
 					</div>
 				</div>
 				<div class="rating_bar" title="6% das avaliações possui 4 estrelas">
 					<div class="rating_header">4 estrelas</div>
 					<div class="rating_count">(2)</div>
-					<div class="rating_progress progress progress-danger"
-						style="height: 10px !Important; margin-top: -10px !Important;">
+					<div class="rating_progress progress progress-danger" style="height: 10px !Important; margin-top: -10px !Important;">
 						<div class="bar progress-bar" style="width: 6%"></div>
 					</div>
 				</div>
 				<div class="rating_bar" title="0% das avaliações possui 3 estrelas">
 					<div class="rating_header">3 estrelas</div>
 					<div class="rating_count">(0)</div>
-					<div class="rating_progress progress progress-danger"
-						style="height: 10px !Important; margin-top: -10px !Important;">
+					<div class="rating_progress progress progress-danger" style="height: 10px !Important; margin-top: -10px !Important;">
 						<div class="bar progress-bar" style="width: 0%"></div>
 					</div>
 				</div>
 				<div class="rating_bar" title="0% das avaliações possui 2 estrelas">
 					<div class="rating_header">2 estrelas</div>
 					<div class="rating_count">(0)</div>
-					<div class="rating_progress progress progress-danger"
-						style="height: 10px !Important; margin-top: -10px !Important;">
+					<div class="rating_progress progress progress-danger" style="height: 10px !Important; margin-top: -10px !Important;">
 						<div class="bar progress-bar" style="width: 0%"></div>
 					</div>
 				</div>
 				<div class="rating_bar" title="0% das avaliações possui 1 estrela">
 					<div class="rating_header">1 estrela</div>
 					<div class="rating_count">(0)</div>
-					<div class="rating_progress progress progress-danger"
-						style="height: 10px !Important; margin-top: -10px !Important;">
+					<div class="rating_progress progress progress-danger" style="height: 10px !Important; margin-top: -10px !Important;">
 						<div class="bar progress-bar" style="width: 0%"></div>
 					</div>
 				</div>
@@ -61,26 +56,23 @@
 <div style="border: 1px">
 	<div class="top-reviews-box">
 		<div class="gym_rating_left pull-left col-md-3">
-			<img width="50" height="50"
-				src="https://dtda4cv2md3ne.cloudfront.net/image/filename/114631/47450_362732440488114_84347150_n.jpg"
-				alt="47450 362732440488114 84347150 n">
+			<img width="50" height="50" src="https://dtda4cv2md3ne.cloudfront.net/image/filename/114631/47450_362732440488114_84347150_n.jpg"
+			    alt="47450 362732440488114 84347150 n">
 		</div>
-		<div class="gym_rating_container col-md-9 pull-left"
-			style="text-align: left;">
+		<div class="gym_rating_container col-md-9 pull-left" style="text-align: left;">
 			<p class="gym_rating_author">
 				<span itemprop="author"> Leandro G. </span>
 			</p>
 			<div class="rate-calendar">
 				<div class="rating_stars ">
-					<i class="icon-star fa fa-star icon_on"></i> <i
-						class="icon-star fa fa-star icon_on"></i> <i
-						class="icon-star fa fa-star icon_on"></i> <i
-						class="icon-star fa fa-star icon_on"></i> <i
-						class="icon-star fa fa-star icon_on"></i>
+					<i class="icon-star fa fa-star icon_on"></i>
+					<i class="icon-star fa fa-star icon_on"></i>
+					<i class="icon-star fa fa-star icon_on"></i>
+					<i class="icon-star fa fa-star icon_on"></i>
+					<i class="icon-star fa fa-star icon_on"></i>
 				</div>
 				<div class="gym_rating_date">
-					<meta itemprop="datePublished" content="2015-09-03">
-					03/Set/15
+					<meta itemprop="datePublished" content="2015-09-03"> 03/Set/15
 				</div>
 			</div>
 		</div>
@@ -97,24 +89,50 @@
 					<div class="col-md-12">
 						<form accept-charset="UTF-8" action="" method="post">
 							<input id="ratings-hidden" name="rating" type="hidden">
-							<textarea class="form-control animated" cols="50" id="new-review"
-								name="comment" placeholder="Enter your review here..." rows="5"></textarea>
-							<div class="text-right">
-								<div class="estrelas">
-									<input type="radio" id="cm_star-empty" name="fb" value=""
-										checked /> <label for="cm_star-1"><i class="fa"></i></label> <input
-										type="radio" id="cm_star-1" name="fb" value="1" /> <label
-										for="cm_star-2"><i class="fa"></i></label> <input type="radio"
-										id="cm_star-2" name="fb" value="2" /> <label for="cm_star-3"><i
-										class="fa"></i></label> <input type="radio" id="cm_star-3" name="fb"
-										value="3" /> <label for="cm_star-4"><i class="fa"></i></label>
-									<input type="radio" id="cm_star-4" name="fb" value="4" /> <label
-										for="cm_star-5"><i class="fa"></i></label> <input type="radio"
-										id="cm_star-5" name="fb" value="5" />
+							<!-- <div class="row" > -->
+							<input class="form-control animated" type="email" id="ratings" name="ratings" placeholder="email">
+							<!-- </div> -->
+							<br>
+							<textarea class="form-control animated" cols="50" id="new-review" name="comment" placeholder="mensagem"
+								rows="5"></textarea>
+<br>
+							<div class="row" ng-repeat="avaliacao in oEmpresa.avaliacaoOptions">
+								<div  class="col-md-12">
+									<div class="pull-left">
+										<label>{{avaliacao.opcao}}:</label>
+									</div>
+									<div class="pull-right">
+										<div class="estrelas">
+											<input type="radio" id="cm_star-empty-{{avaliacao.id}}" name="fb-{{avaliacao.id}}" value="" checked />
+											<label for="cm_star-1-{{avaliacao.id}}">
+												<i class="fa"></i>
+											</label>
+											<input type="radio" id="cm_star-1-{{avaliacao.id}}" name="fb-{{avaliacao.id}}" value="1" />
+											<label for="cm_star-2-{{avaliacao.id}}">
+												<i class="fa"></i>
+											</label>
+											<input type="radio" id="cm_star-2-{{avaliacao.id}}" name="fb-{{avaliacao.id}}" value="2" />
+											<label for="cm_star-3-{{avaliacao.id}}">
+												<i class="fa"></i>
+											</label>
+											<input type="radio" id="cm_star-3-{{avaliacao.id}}" name="fb-{{avaliacao.id}}" value="3" />
+											<label for="cm_star-4-{{avaliacao.id}}">
+												<i class="fa"></i>
+											</label>
+											<input type="radio" id="cm_star-4-{{avaliacao.id}}" name="fb-{{avaliacao.id}}" value="4" />
+											<label for="cm_star-5-{{avaliacao.id}}">
+												<i class="fa"></i>
+											</label>
+											<input type="radio" id="cm_star-5-{{avaliacao.id}}" name="fb-{{avaliacao.id}}" value="5" />
+										</div>
+									</div>
 								</div>
-								<a class="btn btn-danger btn-sm" href="#" id="close-review-box"
-									style="margin-right: 10px;"> <span
-									class="glyphicon glyphicon-remove"></span>Cancel
+							<br>
+							</div>
+							<br>
+							<div class="text-right">
+								<a class="btn btn-danger btn-sm" href="#" id="close-review-box" style="margin-right: 10px;">
+									<span class="glyphicon glyphicon-remove"></span>Cancel
 								</a>
 								<button class="btn btn-success btn-lg" type="submit">Save</button>
 							</div>
