--- a/src/main/resources/static/views/pages/signin.html
+++ b/src/main/resources/static/views/pages/signin.html
@@ -82,13 +82,13 @@
 <div class="page" data-ng-controller="ModalDemoController">
     <script type="text/ng-template" id="myModalContent2.html">
         <div class="modal-header">
-            <h3 class="modal-title" id="modal-title">Solicitar Participação!</h3>
+            <h3 class="modal-title" id="modal-title">Solicitar Participaï¿½ï¿½o!</h3>
         </div>
         <div class="modal-body" id="modal-body">
             <form role="form" ng-submit='login()'>
                 <fieldset>
                     <div class="modal-body" id="modal-body">
-                        Sua solicitação foi enviada, para o adminstrador <br> do jogo assim que for Aprovado/recusado você receber <br> uma noticicação no aplicativo
+                        Sua solicitaï¿½ï¿½o foi enviada, para o adminstrador <br> do jogo assim que for Aprovado/recusado vocï¿½ receber <br> uma noticicaï¿½ï¿½o no aplicativo
                     </div>
                 </fieldset>
             </form>
